# fast_clear

./: .gitignore  CHANGELOG.md  README.md  build_exe.bat  build_exe.ps1  fast_clear.spec  pyproject.toml  requirements.txt  run_as_admin.bat
fast_clear/: __entry__.py  __init__.py  __main__.py  admin.py  cleanup.py  device_clean.py  eventlog_clean.py  file_clean.py  gui.py  main.py  network_clean.py  reg_acl.py  registry_clean.py  repair.py  self_clean.py
